Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
None
-
None
-
Not for Release Notes
-
Q4/2025 Server Maintenance
Description
SET SQL_MODE='ORACLE', autocommit=0; |
CREATE GLOBAL TEMPORARY TABLE gtt (c CLOB); |
INSERT INTO gtt VALUES ('Test'); |
DROP TABLE gtt; |
Doesn't succeed, though DROP TABLE causes an implicit commit.
ALTER TABLE is worth checking, too.
Attachments
Issue Links
- is caused by
-
MDEV-35915 Implement Global temporary tables
-
- In Testing
-