MDEV-37817 DROP TABLE GTT doesn't succeed for ON COMMIT DELETE ROWS

Drop child GTTs on pre-statement impllicit commit stage.

We can't do that inside trans_commit_implicit, because some implicit
commits are fake and part of a bigger logic, where we'd want to preserve
open GTTs.

We can't call mark_tmp_tables_as_free_for_reuse either, since there
could be tables just opened for this transaction, so only drop
exactly what's needed, assuming that tables were marked for reuse in
prev statement, but not dropped yet. One place where mark for reuse is
still required is after closing HANDLER tables.

Parent issue:
MDEV-35915 Implement Global temporary tables